--- a/lib/extract/standalone/lfric/Makefile
+++ b/lib/extract/standalone/lfric/Makefile
@@ -61,7 +61,7 @@ include $(LFRIC_PATH)/lfric_include_flags.inc
 PSYDATA_LIB_NAME = _extract
 PSYDATA_LIB = lib$(PSYDATA_LIB_NAME).a
 
-PROCESS_ARGS = -prefix=extract_ -types=int,logical,real,double \
+PROCESS_ARGS = -prefix=extract_ -types=char,int,logical,real,double \
                        -dims=1,2,3,4
 PROCESS = $$($(PSYDATA_LIB_DIR)/get_python.sh) $(PSYDATA_LIB_DIR)/process.py
 
