issue #1618. Working version.

--- a/examples/lfric/eg11/Makefile
+++ b/examples/lfric/eg11/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # BSD 3-Clause License
 #
-# Copyright (c) 2022, Science and Technology Facilities Council.
+# Copyright (c) 2022-2023, Science and Technology Facilities Council.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -47,7 +47,7 @@ GENERATED_FILES = helmholtz_solver_alg_psy.f90 helmholtz_solver_alg_mod.f90 *.o 
 F90 ?= gfortran
 F90FLAGS ?= -g -O0
 
-OBJ = helmholtz_solver_alg_psy.o helmholtz_solver_alg_mod.o scaled_matrix_vector_kernel_mod.o
+OBJ = helmholtz_solver_alg_psy.o helmholtz_solver_alg_mod.o scaled_matrix_vector_kernel_mod.o driver.o
 
 EXEC = will_not_run.exe
 LFRIC_PATH = ../../../src/psyclone/tests/test_files/dynamo0p3/infrastructure
@@ -77,6 +77,7 @@ $(LFRIC_LIB):
 	$(MAKE) -C $(LFRIC_PATH)
 
 # Dependencies
+driver.o:			helmholtz_solver_alg_mod.o
 helmholtz_solver_alg_psy.o:	scaled_matrix_vector_kernel_mod.o
 helmholtz_solver_alg_mod.o:	helmholtz_solver_alg_psy.o
 scaled_matrix_vector_kernel_mod.o: $(LFRIC_LIB)
