#1990 The config file can now take an optional list of modules that to ignore, i.e. if they are searched for and cannot be found, no warning message will be printed.

--- a/config/psyclone.cfg
+++ b/config/psyclone.cfg
@@ -53,6 +53,10 @@ VALID_PSY_DATA_PREFIXES = profile, extract, read_only_verify, nan_test
 # the mpirun/mpiexec ranks_per_node parameter must match this number.
 OCL_DEVICES_PER_NODE = 1
 
+# Symbols imported from the following modules will be ignored when parsing
+# and will not produce a warning message if they cannot be found
+IGNORE_MODULES = netcdf, mpi
+
 # Settings specific to the LFRic (Dynamo 0.3) API
 # ===============================================
 [dynamo0.3]
