#967 set SSH_AUTH_SOCK

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -2,6 +2,11 @@
 # test suite using a self-hosted runner. 
 on: push
 
+env:
+  # Use the same ssh-agent socket value across all jobs
+  # Useful when a GH action is using SSH behind-the-scenes
+  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+
 jobs:
   build:
     runs-on: ubuntu-latest
