--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -41,5 +41,7 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         ssh: true
+	force: true
+	tags: true
         branch: ${{ github.ref }}
         repository: arporter/PSyclone-mirror
