--- a/examples/lfric/eg19/Makefile
+++ b/examples/lfric/eg19/Makefile
@@ -49,7 +49,7 @@ LFRIC_PATH = ../../../src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME=lfric
 LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
 
-# This will add the required include flags to F90FLAGS
+# This will add the required include flags to LFRIC_INCLUDE_FLAGS
 include $(LFRIC_PATH)/lfric_include_flags.inc
 
 .PHONY: transform compile run
@@ -74,10 +74,10 @@ $(LFRIC_LIB):
 
 
 %.o: %.F90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 %.o: %.f90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 allclean: clean
 	make -C $(LFRIC_PATH) allclean
