--- a/lib/extract/netcdf/lfric/Makefile
+++ b/lib/extract/netcdf/lfric/Makefile
@@ -57,10 +57,10 @@ INF_INC = $(LFRIC_PATH)
 INF_LIB_NAME = lfric_netcdf
 INF_LIB = $(LFRIC_PATH)/lib$(INF_LIB_NAME).a
 
-# This will add the required include flags to F90FLAGS
+# This will add the required include flags to $(LFRIC_INCLUDE_FLAGS)
 include $(LFRIC_PATH)/lfric_include_flags.inc
 
-F90FLAGS += $$(nf-config --fflags) -I$(INF_INC)/field
+LFRIC_INCLUDE_FLAGS += $$(nf-config --fflags) -I$(INF_INC)/field
 PSYDATA_LIB_NAME = _extract
 PSYDATA_LIB = lib$(PSYDATA_LIB_NAME).a
 
@@ -94,7 +94,7 @@ extract_netcdf_base.f90: $(LIB_TMPLT_DIR)/extract_netcdf_base.jinja Makefile
 	$(PROCESS) $(PROCESS_ARGS) -generic-declare -generic-provide $< > extract_netcdf_base.f90
 
 %.o: %.f90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 clean:
 	rm -f *.o *.mod $(PSYDATA_LIB) psy_data_base.f90 extract_netcdf_base.f90
