--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,6 +1,7 @@
 # This workflow pushes any changes to a private mirror that runs the
 # test suite using a self-hosted runner. 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 
 env:
   # Use the same ssh-agent socket value across all jobs
