#976 turn off pushing of tags

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -47,6 +47,6 @@ jobs:
       with:
         ssh: true
         force: true
-        tags: true
+        tags: false
         branch: ${{ github.ref }}
         repository: arporter/PSyclone-mirror
