#976 try hardcoding branch name

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -48,5 +48,6 @@ jobs:
         ssh: true
         force: true
         tags: false
-        branch: ${{ github.ref }}
+        branch: push-to-private
+	# ${{ github.ref }}
         repository: arporter/PSyclone-mirror
