#967 undo branch hardwire and push after fully updating mirror

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -48,6 +48,5 @@ jobs:
         ssh: true
         force: true
         tags: false
-        branch: push-to-private
-        # ${{ github.ref }}
+        branch: ${{ github.ref }}
         repository: arporter/PSyclone-mirror
