--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -48,6 +48,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: integration
     steps:
     - run: echo "REPOSITORY_NAME=${{ github.repository }}"
       shell: bash
