--- a/doc/user_guide/.readthedocs.yaml
+++ b/doc/user_guide/.readthedocs.yaml
@@ -13,7 +13,7 @@ build:
 
 # Build documentation in the docs/user_guide directory with Sphinx
 sphinx:
-   configuration: docs/user_guide/conf.py
+   configuration: doc/user_guide/conf.py
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
@@ -22,4 +22,4 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: docs/user_guide/pip_requirements.txt
+   - requirements: doc/user_guide/pip_requirements.txt
