#2126 update yaml to pip install psyclone

--- a/doc/user_guide/.readthedocs.yaml
+++ b/doc/user_guide/.readthedocs.yaml
@@ -22,4 +22,7 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: doc/user_guide/pip_requirements.txt
+     - method: pip
+       path: .
+       extra_requirements:
+         - doc
