#2145 skip MyBinder in MD linkcheck and UG linkcheck

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -1,4 +1,9 @@
 {
+  "ignorePatterns": [
+    {
+      "pattern": "^https://mybinder.org/v2/gh/stfc/psyclone"
+    }
+  ],
   "replacementPatterns": [
     {
       "pattern": "^https://psyclone.readthedocs.io/en/stable",
