#2132 fix yaml syntax in repo-sync

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -39,7 +39,7 @@ name: Push to private
 
 on:
   push
-  workflow_dispatch:
+  #workflow_dispatch:
 
 env:
   # Use the same ssh-agent socket value across all jobs
