--- a/doc/user_guide/.readthedocs.yaml
+++ b/doc/user_guide/.readthedocs.yaml
@@ -44,6 +44,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  apt_packages:
+    - graphviz
 
 # Build documentation in the doc/user_guide directory with Sphinx
 sphinx:
