#2132 move check on repo name upt to top of push-to-private job

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -48,6 +48,7 @@ env:
 
 jobs:
   build:
+    if: github.repository == 'stfc/PSyclone'
     runs-on: ubuntu-latest
     environment: integration
     steps:
