--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -38,8 +38,7 @@
 name: Push to private
 
 on:
-  push
-  #workflow_dispatch:
+  workflow_dispatch:
 
 env:
   # Use the same ssh-agent socket value across all jobs
@@ -79,7 +78,6 @@ jobs:
         git config --local user.email "${{ secrets.EMAIL }}"
         git config --local user.name "${{ secrets.USERNAME }}"
     - name: Push changes
-      if: ${{ github.repository == 'stfc/PSyclone' }}
       uses: ad-m/github-push-action@master
       with:
         ssh: true
