#2132 update other RTD yaml files

--- a/doc/reference_guide/.readthedocs.yaml
+++ b/doc/reference_guide/.readthedocs.yaml
@@ -44,6 +44,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  apt_packages:
+    - graphviz
 
 # Build documentation in the doc/reference_guide/source directory with Sphinx
 sphinx:
