--- a/doc/developer_guide/.readthedocs.yaml
+++ b/doc/developer_guide/.readthedocs.yaml
@@ -44,7 +44,7 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-  apt-packages:
+  apt_packages:
     - graphviz
 
 # Build documentation in the doc/developer_guide directory with Sphinx
