I #1833: Improve make clean

--- a/tutorial/practicals/LFRic/building_code/1_simple_kernels/part1/Makefile
+++ b/tutorial/practicals/LFRic/building_code/1_simple_kernels/part1/Makefile
@@ -109,7 +109,7 @@ $(ALGORITHM_SRC): $(PSY_SRC)
 	-opsy $*_psy.f90 -oalg $*.f90 $<
 
 clean:
-	$(MAKE) -C $(LFRIC_PATH) clean
+	rm -f *.o *.mod $(EXEC) $(ALGORITHM_SRC) $(PSY_SRC)
 
 allclean: clean
 	$(MAKE) -C $(LFRIC_PATH) allclean
