I #1833: Updated third tutorial

--- a/tutorial/practicals/LFRic/building_code/3_time_evolution/Makefile
+++ b/tutorial/practicals/LFRic/building_code/3_time_evolution/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # BSD 3-Clause License
 #
-# Copyright (c) 2020-2022, Science and Technology Facilities Council.
+# Copyright (c) 2020-2023, Science and Technology Facilities Council.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -58,7 +58,7 @@ LFRIC_PATH = $(PSYCLONE_RELPATH)/src/psyclone/tests/test_files/dynamo0p3/infrast
 LFRIC_NAME = lfric_netcdf
 LFRIC_LIB = $(LFRIC_PATH)/lib$(LFRIC_NAME).a
 
-# This will add the required include flags to F90FLAGS
+# This will add the required include flags to LFRIC_INCLUDE_FLAGS
 include $(LFRIC_PATH)/lfric_include_flags.inc
 
 # GungHo auxiliary libraries
@@ -77,13 +77,20 @@ EXAMPLE_OBJ = $(DRIVER_OBJ) $(ALGORITHM_OBJ) $(PSY_OBJ) $(KERNEL_OBJ)
 # Targets
 .DEFAULT_GOAL := compile
 
-.PHONY: compile test clean
+.PHONY: transform compile run clean allclean
 
-compile: test $(EXEC)
+# Test PSyclone target for continuous integration
+transform: $(PSY_SRC) $(ALGORITHM_SRC)
+
+compile: transform $(EXEC)
+
+run: compile
+	$(EXEC)
 
 $(EXEC): $(LFRIC_LIB) $(GHLIB_LIB) $(EXAMPLE_OBJ)
-	$(F90) $(F90FLAGS) $(EXAMPLE_OBJ) -o $(EXEC) -L$(LFRIC_PATH) \
-	-l$(LFRIC_NAME) $$(nf-config --flibs) -L$(GHLIB_PATH) -l$(GHLIB_NAME)
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) $(EXAMPLE_OBJ) \
+	-o $(EXEC) -L$(LFRIC_PATH) -l$(LFRIC_NAME) \
+	$$(nf-config --flibs) -L$(GHLIB_PATH) -l$(GHLIB_NAME)
 
 $(GHLIB_LIB):
 	$(MAKE) -C $(GHLIB_PATH)
@@ -96,20 +103,23 @@ $(DRIVER_OBJ): $(ALGORITHM_OBJ) $(PSY_OBJ) $(KERNEL_OBJ) $(LFRIC_LIB) $(GHLIB_LI
 $(ALGORITHM_OBJ): $(PSY_OBJ) $(KERNEL_OBJ) $(LFRIC_LIB) $(GHLIB_LIB)
 $(PSY_OBJ): $(KERNEL_OBJ) $(LFRIC_LIB) $(GHLIB_LIB)
 $(KERNEL_OBJ): $(LFRIC_LIB) $(GHLIB_LIB)
+time_evolution_alg_mod.o: init_perturbation_kernel_mod.o \
+	prop_perturbation_kernel_mod.o time_evolution_alg_mod_psy.o \
+	$(GHLIB_LIB) $(LFRIC_LIB)
+time_evolution_alg_mod_psy.o: init_perturbation_kernel_mod.o \
+	prop_perturbation_kernel_mod.o $(GHLIB_LIB) $(LFRIC_LIB)
+prop_perturbation_kernel_mod.o: $(GHLIB_LIB)
 
 %.o %.mod: %.F90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 %.o %.mod: %.f90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 $(ALGORITHM_SRC): $(PSY_SRC)
 
 # Keep the generated Alg and PSy files
 .precious: $(ALGORITHM_SRC) $(PSY_SRC)
-
-# Test PSyclone target for continuous integration
-test: $(PSY_SRC) $(ALGORITHM_SRC)
 
 %_psy.f90: %.x90
 	psyclone $(PSYCLONE_CMD) --config $(PSYCLONE_RELPATH)/config/psyclone.cfg \
@@ -117,5 +127,7 @@ test: $(PSY_SRC) $(ALGORITHM_SRC)
 
 clean:
 	rm -f *.o *.mod *.txt *.png $(EXEC) $(ALGORITHM_SRC) $(PSY_SRC)
+
+allclean: clean
 	make -C $(GHLIB_PATH) clean
 	make -C $(LFRIC_PATH) clean
